# itmo-labs

./: .gitignore
term1/Информатика/: P3124 Информатика ЛР5 Здор ММ.docx  P3124_Информатика_ЛР2_Здор_Матвей.docx  P3124_Информатика_ЛР3_Здор_Матвей.docx  Информатика_ЛР4_Здор ММ_P3124.docx  Р3124_Информатика_ЛР1_Здор_Матвей.docx
term1/Основы профессиональной деятельности/: P3124 ЛР1 ОПД Здор М.М.docx  setup.sh  Р3124 ЛР2 ОПД Здор М.М.docx
term1/Программирование/: P3124 ЛР2 Программирование Здор М.М.docx  Р3124 ЛР4 Программирование Здор ММ.docx  Р3124_ЛР1_Программированние_Здор Матвей.docx  Р3124_ЛР3_Прога_Здор ММ.docx
term2/Основы профессиональной деятельности/: README.md  opd_2_sem.sql  package-lock.json  package.json  server.js
term2/Программирование/: ЛР5_Прога_Здор_ММ.docx
term4/АИСД/: task1.py  task10.py  task11.py  task12.py  task13.py  task14.py  task15.cpp  task15.py  task16.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py  taskdop1.py  taskdop2.py  taskdop3.py
term4/Математическая_статистика/: main.py
term5/Операционные_системы/os-course/lab/vtpc/: CMakeLists.txt
term5/Операционные_системы/os-course/lab/vtpc/bench/: CMakeLists.txt  bench_crc_load.c
term5/Операционные_системы/os-course/lab/vtpc/lib/: CMakeLists.txt  vtpc.c  vtpc.h
term5/Разработка_веб-приложений/: .gitignore  README.md
term5/СИИ/: СИИ_лаб1 Здор Матвей.docx  СИИ_лаб4_Здор Матвей.docx
term6/CN/: lab1.pkt  lab1_2.pkt  lab2.pkt  lab3.pkt  Здор_лаб1.docx  Здор_лаб2.docx  Здор_лаб3.docx
term6/TS/: pyproject.toml  Отчёт_лаб1_Здор.docx  Отчёт_лаб2_Здор.docx  Отчёт_лаб3_Здор.docx  Отчёт_лаб4_Здор.docx  Отчёт_лаб5_Здор.docx  Отчёт_лаб6_Здор.docx
term6/TS/lab1/: lab1_fsm.ipynb
term6/TS/lab2/: lab2_var5.ipynb
term6/TS/lab3/: Lab3_Markov_Ergodic_Chain.ipynb
term6/TS/lab4/: Lab4_Cellular_Automata.ipynb  lab4_src.py
term6/TS/lab5/: lab5.ipynb  lab5_src.py
term6/TS/lab6/: lab6_src.py  lab6_var4.ipynb
term6/TS/rk1/: rk1.ipynb  ТС_Здор.docx
(+594 files in other folders)
