[project]
name = "ts-labs"
version = "0.1.0"
description = "Теория систем (ИТМО, 6 семестр) — общее окружение для лабораторных"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "control>=0.10",
    "sympy>=1.13",
    "pandas>=2.2",
    "ipykernel>=6.29",
    "nbclient>=0.10",
    "nbconvert>=7.16",
    "nbformat>=5.10",
    "jupyterlab>=4.2",
]

[tool.uv]
package = false
